--- a/src/app/components/classe/activite/activite.component.html
+++ b/src/app/components/classe/activite/activite.component.html
@@ -1,1 +1,72 @@
-<p>activite works!</p>
+<app-dashboard></app-dashboard>
+<div class="tot">
+    <div class="one">
+<div class="liste">
+jjkj
+</div>
+
+<div class="calen">
+    hhh
+</div>
+    </div>
+    <div class="two">
+        <div class="pop">
+            <input type="checkbox" id="toggle">
+            <label for="toggle" class=" btn btn-primary add" style="float: right;">Add</label>
+      
+            <dialog>
+                <!--start-->
+      
+                <label for="toggle" class="close">X</label>
+                <form #addForm="ngForm" class="row g-3">
+
+                    <div class="col-sm-6 ">
+                        <label for="exampleFormControlSelect1">Personnels</label>
+                        <select class="form-control" id="exampleFormControlSelect1">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                          <option>5</option>
+                        </select>
+                        
+                     
+                                 </div>
+                    <div class="col-sm-6 ">
+                      <label for="Date">To Date</label>
+                      <input type="text" name="Date" class="form-control" id="Date" placeholder="Date" required>
+                    </div>
+          
+                    <div class="col-sm-6 ">
+                        <label for="Salle">Salle</label>
+                        <input type="Salle" name="Salle" class="form-control" id="Salle" placeholder="Salle" required>
+                      </div>
+                      <div class="col-sm-6 ">
+                        <label for="Horaire">Horaire </label>
+                        <input type="text" name="Horaire" class="form-control" id="Horaire" placeholder="Horaire" required>
+                      </div>
+                  
+
+                      <div class="col-sm-6 ">
+                        <label for="type">Type</label>
+                        <input type="type" name="type" class="form-control" id="type" placeholder="Type Activité" required>
+                      </div>
+                      <div class="col-sm-6 ">
+                        <label for="Nom">Nom Activité</label>
+                        <input type="Nom" name="Nom" class="form-control" id="Nom" placeholder="Nom" required>
+                      </div>
+                </form>
+                <!--end-->
+      
+      
+      
+      
+              </dialog>
+          </div>
+        <full-calendar [options]="calendarOptions" class="full">
+            
+        </full-calendar>
+        
+    </div>
+
+</div>
