--- a/src/app/components/classe/liste-eleve/liste-eleve.component.html
+++ b/src/app/components/classe/liste-eleve/liste-eleve.component.html
@@ -1,147 +1,150 @@
 <app-dashboard></app-dashboard>
 
-  <div class="pop">
-    <input type="checkbox" id="toggle">
-    <label for="toggle" class="add">Add</label>
+<div class="tot">
 
-    <dialog>
-      <form class="row g-3" #addForms="ngForm" (ngSubmit)="onAddeleve(addForms)">
-        <div class="col-md-6">
-          <label for="inputnom" class="form-label">Nom</label>
-          <input type="text" class="form-control" name="nom" id="inputnom" ngModel>
-        </div>
-        <div class="col-md-6">
-          <label for="inputprenom" class="form-label">Prenom</label>
-          <input type="text" class="form-control" name="prenom" id="inputprenom" ngModel>
-        </div>
-        <div class="col-md-4">
-          <label for="inputGenre" class="form-label">Genre</label>
-          <select id="inputGenre" class="form-select" name="genre" ngModel>
-            <option selected>Choisir</option>
-            <option>garçon</option>
-            <option>fille</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <label for="inputtaille" class="form-label">Taille</label>
-          <input type="text" class="form-control" id="inputtaille" name="taille " ngModel>
-        </div>
+  <div class="one">
+    <div class="pop">
+      <input type="checkbox" id="toggle">
+      <label for="toggle" class=" btn btn-primary add">Add</label>
 
-        <div class="col-md-4">
-          <label for="inputPoid" class="form-label">Poid</label>
-          <input type="text" class="form-control" id="inputPoid" name="poid" ngModel>
-        </div>
-        <div class="col-md-4">
-          <label for="inputPoid" class="form-label">Date</label>
-          <input type="date" class="form-control" id="inputPoid" name="date" ngModel>
-        </div>
-        <div class="col-md-4">
-          <label for="inputVaccinaction" class="form-label">Vaccinaction</label>
-          <select id="inputVaccinaction" class="form-select" name="vaccination" ngModel>
-            <option selected>Choisir</option>
-            <option>Oui</option>
-            <option>Non</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <label for="inputMaladies" class="form-label">Maladies</label>
-          <input type="text" class="form-control" id="inputMaladies" name="maladies" ngModel>
-        </div>
+      <dialog>
+        <form class="row g-3" #addForms="ngForm" (ngSubmit)="onAddeleve(addForms)">
 
-        <div class="col-md-4">
-          <label for="inputMedicament" class="form-label">Médicament</label>
-          <input type="text" class="form-control" id="inputMedicament" name="medicament" ngModel>
-        </div>
-        <div class="col-md-6">
-          <label for="inputparent" class="form-label">Prenom parent</label>
-          <input type="text" class="form-control" id="inputparent" name="nom_parent" ngModel>
-        </div>
-        <div class="col-md-6">
-          <label for="inputtel" class="form-label">Télèphone parent</label>
-          <input type="text" class="form-control" id="inputtel" name="tel_parent" ngModel>
-        </div>
-        <div class="col-md-12">
-          <label for="inputEmail4" class="form-label">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" name="email_parent" ngModel>
-        </div>
-        <div class="col-12">
-          <label for="inputAddress" class="form-label">Address</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="adresse" ngModel>
-        </div>
-        
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">Save</button>
-        </div>
-        <div class="col-12">
-          <label for="toggle">close </label>
-        </div>
-      </form>
-    </dialog>
-  </div>
+          <div class="col-md-6">
+            <label for="inputnom" class="form-label">Nom</label>
+            <input type="text" class="form-control" name="nom" id="inputnom" ngModel>
+          </div>
+          <div class="col-md-6">
+            <label for="inputprenom" class="form-label">Prenom</label>
+            <input type="text" class="form-control" name="prenom" id="inputprenom" ngModel>
+          </div>
+          <div class="col-md-4">
+            <label for="inputGenre" class="form-label">Genre</label>
+            <select id="inputGenre" class="form-select" name="genre" ngModel>
+              <option selected>Choisir</option>
+              <option>garçon</option>
+              <option>fille</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label for="inputtaille" class="form-label">Taille</label>
+            <input type="text" class="form-control" id="inputtaille" name="taille " ngModel>
+          </div>
 
+          <div class="col-md-4">
+            <label for="inputPoid" class="form-label">Poid</label>
+            <input type="text" class="form-control" id="inputPoid" name="poid" ngModel>
+          </div>
+          <div class="col-md-4">
+            <label for="inputPoid" class="form-label">Date</label>
+            <input type="date" class="form-control" id="inputPoid" name="date" ngModel>
+          </div>
+          <div class="col-md-4">
+            <label for="inputVaccinaction" class="form-label">Vaccinaction</label>
+            <select id="inputVaccinaction" class="form-select" name="vaccination" ngModel>
+              <option selected>Choisir</option>
+              <option>Oui</option>
+              <option>Non</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label for="inputMaladies" class="form-label">Maladies</label>
+            <input type="text" class="form-control" id="inputMaladies" name="maladies" ngModel>
+          </div>
 
+          <div class="col-md-4">
+            <label for="inputMedicament" class="form-label">Médicament</label>
+            <input type="text" class="form-control" id="inputMedicament" name="medicament" ngModel>
+          </div>
+          <div class="col-md-6">
+            <label for="inputparent" class="form-label">Prenom parent</label>
+            <input type="text" class="form-control" id="inputparent" name="nom_parent" ngModel>
+          </div>
+          <div class="col-md-6">
+            <label for="inputtel" class="form-label">Télèphone parent</label>
+            <input type="text" class="form-control" id="inputtel" name="tel_parent" ngModel>
+          </div>
+          <div class="col-md-12">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4" name="email_parent" ngModel>
+          </div>
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">Address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" name="adresse" ngModel>
+          </div>
 
-
-
-<div class="roww">
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Save</button>
+          </div>
+          <div class="col-12">
+            <label for="toggle">close </label>
+          </div>
+        </form>
+      </dialog>
+    </div>
 
 
-  <div class="columnn">
-    <table cellpadding="0" cellspacing="0" border="0">
+
+    <div class="tab">
       <h1 className="title">Liste d'eleves</h1>
-
-      <div class="tbl-header">
-
-
-        <tr>
-          <th scope="col">Nom</th>
-
-        </tr>
+      <table class="table table-hover" style="margin-right: 1.2%; ">
 
 
-      </div>
-      <div>
-        <table cellpadding="0" cellspacing="0" border="0">
+        <thead>
+
+
+          <tr>
+            <th scope="col">Nom</th>
+
+          </tr>
+
+
+        </thead>
+
         <tbody>
           <tr *ngFor="let p of classeInput?.eleves">
 
             <td class="lis">
-              <a [routerLink]="['/profileleve',p.idEleve]" style="text-decoration: none; color: black; font-size: 22px;">{{p.nom}} </a>
-             
+              <a [routerLink]="['/profileleve',p.idEleve]"
+                style="text-decoration: none; color: black; font-size: 22px;">{{p.nom}} </a>
+
               <div class="dang">
                 <button class="btn btn-danger" (click)="onDeleteEleve(p.idEleve)" title="Delete">
-                  <i
-                    class="fa fa-trash"></i></button>
+                  <i class="fa fa-trash"></i></button>
               </div>
-              
+
             </td>
           </tr>
         </tbody>
-        </table>
+
+
+
+      </table>
+    </div>
+  </div>
+
+  <div class="two">
+    <h1 className="title">Liste de présence</h1>
+
+    <table>
+      <div class="thead" >
+
+
+        <tr>
+          <th>Nom</th>
+          <th>Etat</th>
+          <th>Action</th>
+        </tr>
+
 
       </div>
     </table>
-</div>
+     
+       
+     
+      <div class="tbl-content">
 
-    <div class="columnn tb2">
-      <table >
-        <h1 className="title">Liste de présence</h1>
-        <table cellpadding="0" cellspacing="0" border="0">
-        <div class="tbl-header">
-
-
-          <tr>
-            <th>Nom</th> 
-            <th>Etat</th>
-            <th>Action</th>
-          </tr>
-
-
-        </div>
-        </table>
-        <div class="tbl-content">
-
-          <table cellpadding="0" cellspacing="0" border="0">
+      <table>
 
           <tr *ngFor="let p of classeInput?.eleves">
             <td style="font-size: 22px;">{{p.nom}}</td>
@@ -152,19 +155,19 @@
             <td> <input type="checkbox" [checked]="p.select"></td>
             <td> <input type="checkbox" [checked]="p.select"></td-->
             <td><select name="eleves" (change)="presenceClick(p,$event)">
-              <option selected  value="" disabled>select etat</option>
-              <option value="true">present</option>
-              <option value="false">absent</option>
-            </select> </td> 
+                <option selected value="" disabled>select etat</option>
+                <option value="true">present</option>
+                <option value="false">absent</option>
+              </select> </td>
             <td>
               <div class="pop">
                 <input type="checkbox" id="toggle2">
 
-                
-                <label for="toggle2" class="add" (click)="getPresences(p)">Add</label>
-            
+
+                <label for="toggle2" class="view" (click)="getPresences(p)"><li class="pi pi-search" style="color: white;"></li></label>
+
                 <dialog>
-                  
+
                   <p *ngFor="let p of presences">{{p.etat?'Present':'absent'}} {{p.datePE}}</p>
                   <div class="col-12">
                     <label for="toggle2">close </label>
@@ -175,11 +178,13 @@
           </tr>
 
 
-</table>
-        </div>
+        </table>
+      </div>
 
 
-      </table>
-    
+   
 
-    </div>
+
+  </div>
+
+</div>
