--- a/src/app/components/classe/profil-eleve/profil-eleve.component.scss
+++ b/src/app/components/classe/profil-eleve/profil-eleve.component.scss
@@ -1,8 +1,9 @@
 .tot{
   display: grid;
-  grid-template-columns: 620px  auto 500px;
-  gap: 2%;
-  margin-top: 1.5%;
+  grid-template-columns: 550px  auto 550px;
+  gap: 1%;
+  margin-top: 1%;
+  height: 89vh;
 }
 
 .ligne1{
@@ -19,6 +20,7 @@
   gap: 8%;
   font-family:'Mukta', sans-serif;
   font-size: large; 
+  margin-left: 1%;
   
 }
  .collapse1{
@@ -29,8 +31,10 @@ margin-top: 0px;
 }
 
 .two{
-  box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
-  background-color:#A8C3D0;
+  
+  display: grid;
+  grid-template-rows: 49% 50%;
+  gap: 1%;
 }
 .three{
   box-shadow:  0 5px 15px rgba(138, 135, 135, 0.534);
@@ -42,12 +46,25 @@ margin-top: 0px;
   font-family:'Mukta', sans-serif;
 font-size: large; 
 line-height: 30px;
-margin-top: 10%;
+
+}
+.info{
+  margin-top: 15%;
 
 }
 
+.act{
+  background-color: #A8C3D0;
+}
 
+.photo{
+  background-color: #A8C3D0;
+}
 
+.close{
+  margin-left: 95%;
+ 
+  }
 
 #toggle{
   visibility: hidden;
@@ -67,9 +84,12 @@ margin-top: 10%;
   z-index: 99;
 }
 
-#toggle3:checked ~ dialog {
+
+#toggle2:checked ~ dialog {
   display: block;
+  z-index: 99;
 }
+
 
 #toggle3{
   visibility: hidden;
@@ -78,11 +98,11 @@ margin-top: 10%;
   z-index: 99;
 }
 
-#toggle2:checked ~ dialog {
+
+#toggle3:checked ~ dialog {
   display: block;
 }
-
-label{ background: skyblue;
+label{ 
   border-radius: 4px;}
 .add{
   background: blue;
@@ -90,4 +110,22 @@ label{ background: skyblue;
   
 
   border-radius: 4px;
+}
+.mod{
+
+  padding: 0em 1em;
+  float: right;
+}
+.evaluer{
+  margin-top: 1.3%;
+}
+.card{
+  margin: 2%;
+  background-color: #ECEFF1;
+  height: 90%;
+  z-index: 1;
+}
+.search{
+  margin: 2%;
+  margin-top: 5%;
 }
